# codoxear

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  VOICE_PUSH_IMPLEMENTATION_PLAN.md  broker.py  context.md  pyproject.toml  requirements.txt  server.py  sessiond.py
.claude/: settings.local.json
.md/: build-your-component-library-shadcn-preact-shadcn-preact-onrender-com-20260407T123142Z-0ca344700b.md  build-your-component-library-shadcn-preact-shadcn-preact-onrender-com-20260407T123148Z-40c431ad90.md  build-your-component-library-shadcn-preact-shadcn-preact-onrender-com-20260407T123149Z-3a5dec5496.md  command-md-raw-githubusercontent-com-20260408T075602Z-317ed1dc4e.md  feat-pi-improve-session-path-discovery-and-abort-handling-by-huapeixuan-pull-req-github-com-20260404T091237Z-5a58f7567c.md
codoxear/: agent_backend.py  broker.py  claude_log.py  cli_support.py  constants.py  page_state_sqlite.py  pi_broker.py  pi_log.py  pi_messages.py  pi_rpc.py  proc_fd_scan.py  pty_util.py  rollout_log.py  server.py  sessiond.py  util.py  voice_push.py
codoxear/attention/: model.py  (+1 more)
docs/: pr16-share-deck.pptx  python-backend-seams-after-breakdown.excalidraw  python-backend-seams-before-after.excalidraw
scripts/: codoxear-resume  generate_pr16_share_ppt.mjs  import_page_state_to_sqlite.py
static_backup/: app.css  app.js  index.html  service-worker.js
tests/: __init__.py  pi_fixtures.py  test_agent_backend.py  test_backend_seams_source.py  test_broker_busy_state.py  test_broker_fail_closed.py  test_broker_pi_declared_log.py  test_broker_proc_rollout.py  test_broker_spawn_env.py  test_button_tooltips_source.py  test_chat_decorations_ui.py  test_chat_index_dedup.py  test_chat_scrollback_source.py  test_cli_support.py  test_dependency_dag_source.py  test_enter_to_send_ui.py  test_file_history.py  test_file_inspect.py  test_file_list.py  test_file_picker_session_state.py  test_file_ref_parsing_ui.py  test_file_upload.py  test_file_viewer_source.py  test_frontend_contract_source.py  test_harness_input_source.py  test_harness_sweep.py  test_hidden_sessions_startup.py  test_idle_heuristics.py  test_last_updated_ts.py  test_launch_defaults.py  test_launch_provenance.py  test_launch_ui_source.py  test_markdown_renderer_source.py  test_markdown_tables.py  test_message_cursor.py  test_message_index.py  test_message_route_source.py  test_message_timestamp_ui.py  test_message_transcript_state.py  test_new_session_modal_refresh.py  (+48 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
(+200 files in other folders)
