[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codoxear"
version = "0.1.0"
description = "Unofficial mobile handoff for Codex TUI sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["Pillow>=9.0", "py-vapid>=1.9.2", "pywebpush>=2.3.0"]

[project.scripts]
codoxear-server = "codoxear.server:main"
codoxear-broker = "codoxear.broker:main"
codoxear-pi-broker = "codoxear.pi_broker:main"

[tool.setuptools]
packages = ["codoxear"]
include-package-data = true

[tool.setuptools.package-data]
codoxear = ["static/*"]
