[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codoxear"
version = "0.1.0"
description = "Unofficial mobile handoff for Codex TUI sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["Pillow>=9.0", "py-vapid>=1.9.2", "pywebpush>=2.3.0"]

[project.optional-dependencies]
dev = ["mypy>=1.20", "ruff>=0.15"]

[project.scripts]
codoxear-server = "codoxear.server:main"
codoxear-broker = "codoxear.broker:main"
codoxear-pi-broker = "codoxear.pi_broker:main"

[tool.setuptools]
packages = ["codoxear"]
include-package-data = true

[tool.setuptools.package-data]
codoxear = ["static/*", "static/dist/**/*", "static/dist/.vite/manifest.json"]

[tool.ruff]
target-version = "py312"
src = ["codoxear"]
include = ["codoxear/**/*.py"]

[tool.ruff.lint]
select = ["I", "F401", "F841"]

[tool.mypy]
python_version = "3.12"
files = [
    "codoxear/agent_backend.py",
    "codoxear/attention",
    "codoxear/http",
    "codoxear/page_state_sqlite.py",
    "codoxear/pi/ui_bridge.py",
    "codoxear/pi_log.py",
    "codoxear/sessions",
    "codoxear/util.py",
]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true
